@@ -77,6 +77,8 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 		   this to define a macro to open the scroll back buffer in less (for
 		   instance) in a new tab, and search regexp's to your heart's content
 		   :).
+		7. Made the extra height of active tabs, and radius of tab corners
+		   compile time options.
 
 
 0.4.2 to 0.5.0
